# deadline-cloud-for-unreal-engine

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  pyproject.toml  requirements-testing.txt
.github/workflows/: release_publish.yml  reuse_python_build.yml
docs/source/: adaptor_deployment.rst  code_documentation.rst  conf.py  index.rst  plugin_installation.rst  plugin_usage.rst
docs/source/adaptor_deployment/: deployment.rst  job_bundle_example.rst  prerequisites.rst
docs/source/code_documentation/: deadline.unreal_adaptor.UnrealAdaptor.rst  deadline.unreal_adaptor.UnrealClient.rst  deadline.unreal_adaptor.UnrealClient.step_handlers.rst  deadline.unreal_adaptor.rst  deadline.unreal_submitter.rst  deadline.unreal_submitter.unreal_dependency_collector.rst  deadline.unreal_submitter.unreal_open_job.rst
docs/source/plugin_installation/: preparing_environment.rst  prerequisites.rst
docs/source/plugin_usage/: launching.rst  use_cases.rst
install_builder/: deadline-cloud-for-unreal-engine.xml
src/deadline/unreal_adaptor/UnrealAdaptor/: __init__.py  __main__.py  adaptor.py  common.py
src/deadline/unreal_adaptor/UnrealAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/unreal_adaptor/UnrealClient/: __init__.py  unreal_client.py
src/deadline/unreal_adaptor/UnrealClient/step_handlers/: __init__.py  base_step_handler.py  unreal_custom_step_handler.py  unreal_render_step_handler.py
src/deadline/unreal_submitter/: common.py  settings.py  submitter.py
src/deadline/unreal_submitter/templates/: default_unreal_job_template_v04.yaml  default_unreal_job_template_v05.yaml  default_unreal_job_template_v06.yaml  default_unreal_step_template_v04.yaml  default_unreal_step_template_v05.yaml
src/deadline/unreal_submitter/unreal_dependency_collector/: collector.py  common.py  dependency_search_options.py
src/deadline/unreal_submitter/unreal_open_job/: job_step.py  open_job_description.py
src/unreal_plugin/: DEVELOPMENT.md  README.md  UnrealDeadlineCloudService.uplugin  install_unreal_submitter.bat  install_unreal_submitter_internal.bat
src/unreal_plugin/Binaries/Win64/: UnrealEditor.modules
src/unreal_plugin/Config/: DefaultUnrealBealineService.ini  DefaultUnrealDeadlineCloudService.ini
src/unreal_plugin/Content/Python/: init_unreal.py  job_library.py  remote_executor.py  settings.py
src/unreal_plugin/Documentation/: Doxyfile
src/unreal_plugin/Source/UnrealDeadlineCloudService/: UnrealDeadlineCloudService.Build.cs
src/unreal_plugin/Source/UnrealDeadlineCloudService/Private/: UnrealDeadlineCloudServiceModule.cpp
src/unreal_plugin/Source/UnrealDeadlineCloudService/Private/DeadlineCloudJobSettings/: DeadlineCloudDeveloperSettings.cpp  DeadlineCloudJobDataAsset.cpp  DeadlineCloudJobPresetDetailsCustomization.cpp  DeadlineCloudSettingsDetails.cpp  DeadlineCloudStatusHandler.cpp
src/unreal_plugin/Source/UnrealDeadlineCloudService/Private/MovieRenderPipeline/: DeadlineCloudRenderStepSetting.cpp  DeadlineCloudStepBaseSetting.cpp  MoviePipelineDeadlineCloudExecutorJob.cpp
src/unreal_plugin/Source/UnrealDeadlineCloudService/Private/PythonAPILibraries/: DeadlineCloudJobBundleLibrary.cpp  PythonAPILibrary.cpp  PythonGameThreadExecutor.cpp
src/unreal_plugin/Source/UnrealDeadlineCloudService/Public/: UnrealDeadlineCloudServiceModule.h
src/unreal_plugin/Source/UnrealDeadlineCloudService/Public/DeadlineCloudJobSettings/: DeadlineCloudDeveloperSettings.h  DeadlineCloudJobDataAsset.h  DeadlineCloudJobPresetDetailsCustomization.h  DeadlineCloudSettingsDetails.h  DeadlineCloudStatusHandler.h
src/unreal_plugin/Source/UnrealDeadlineCloudService/Public/MovieRenderPipeline/: DeadlineCloudCustomScriptStepSetting.h  DeadlineCloudRenderStepSetting.h  DeadlineCloudStepBaseSetting.h  MoviePipelineDeadlineCloudExecutorJob.h
src/unreal_plugin/Source/UnrealDeadlineCloudService/Public/PythonAPILibraries/: DeadlineCloudJobBundleLibrary.h  PythonAPILibrary.h  PythonGameThreadExecutor.h
test/deadline_adaptor_for_unreal/end-to-end/: test_adaptor.py
test/deadline_adaptor_for_unreal/end-to-end/data/: run-data_render.yml
test/deadline_adaptor_for_unreal/end_to_end/: test_adaptor.py
test/deadline_adaptor_for_unreal/end_to_end/data/: init-data_render.yml  run-data.yml
test/deadline_adaptor_for_unreal/unit/UnrealAdaptor/: test_adaptor.py
test/deadline_adaptor_for_unreal/unit/UnrealClient/: test_client.py
test/deadline_adaptor_for_unreal/unit/UnrealClient/step_handlers/: __init__.py  test_custom_step_handler.py
test/deadline_adaptor_for_unreal/unit/UnrealClient/step_handlers/custom_scripts/: existed_not_valid_script.py  valid_script.py
test/deadline_submitter_for_unreal/unit/: test_submitter.py
test/deadline_submitter_for_unreal/unit/cases/: test_unreal_dependency_collector.py  test_unreal_open_job.py  test_unreal_submitter.py
test/deadline_submitter_for_unreal/unit/expected_job_bundle/: info.txt
test_job_bundles/UnrealJob/: asset_references.yaml  init-data.yaml  parameter_values.yaml  run-data.yaml  template.yaml
test_projects/: DeadlineCloud.uproject  README.md  delete_git_source.bat  pull_ue_plugin.bat  pull_ue_plugin_internal.bat
test_projects/Config/: DefaultEngine.ini
test_projects/Content/: DeadlineCloudJobPreset.uasset
test_projects/Content/Test/: Config.uasset  Cube.uasset  TestLevel.umap  TestLevelSequence.uasset  TestLevel_HLOD0_Instancing.uasset
test_projects/Content/__ExternalActors__/Test/TestLevel/0/2A/: 8WSRSJQKO6X319J6M94PV5.uasset
test_projects/Content/__ExternalActors__/Test/TestLevel/0/4A/: NQUEF5HTIG8S9UD0Y7QGC4.uasset
test_projects/Content/__ExternalActors__/Test/TestLevel/0/57/: 75M2SKT7CVPRXAU4W4XGCE.uasset
test_projects/Content/__ExternalActors__/Test/TestLevel/0/5A/: BY7AKZXAVX7OXWZ7F79EQD.uasset
test_projects/Content/__ExternalActors__/Test/TestLevel/0/8K/: IONOLNEGE4N95MEV53O470.uasset
test_projects/DeadlineCloudScripts/: after.py  before.py
test_projects/Saved/MovieRenderPipeline/: QueueManifest.utxt
(+137 files in other folders)
